syntax = "proto3";

package cart;

service CartService {
  // CRUD
  rpc GetCart (UserIdRequest) returns (CartResponse);
  rpc AddItem (AddItemRequest) returns (CartResponse);
  rpc RemoveItem (RemoveItemRequest) returns (CartResponse);
  rpc ClearCart (UserIdRequest) returns (Empty);
}

message Empty {}

message UserIdRequest {
  string userId = 1;
}

message AddItemRequest {
  string userId = 1;
  string productId = 2;
  string productName = 3;
  double price = 4;
  int32 quantity = 5;
}

message RemoveItemRequest {
  string userId = 1;
  string productId = 2;
}

message CartItem {
  string productId = 1;
  string productName = 2;
  double price = 3;
  int32 quantity = 4;
  double subtotal = 5;
}

message CartResponse {
  string userId = 1;
  repeated CartItem items = 2;
  double total = 3;
}